fixing alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,10 +45,11 @@ body, html {
 #navbarNav
 { color:goldenrod;}
 
-.card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
- 
+main   {
+ display: flex;
+ padding-left: 750px;
 }
 
+h2 {
+  text-align: center;
+}
